# lpaste

./: .hgtags  .travis.yml  CHANGES.rst  CHANGES.txt  README  README.rst  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
lpaste/: clipboard.py  lpaste.py  setup.py  source.py
lpaste.app/Contents/MacOS/: Application Stub
lpaste/darwin/: clipboard.py
lpaste/lpaste/: keyring.py  lpaste.py  source.py
lpaste/lpaste/win32/: clipboard.py
lpaste/win32/: clipboard.py
qpaste/: setup.py
qpaste/qpaste/: qpaste.py
