[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lpaste"
authors = [
	{ name = "Chris Mulligan", email = "chmullig@gmail.com" },
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Library Paste command-line client"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"requests",
	"keyring>=0.6",
	"jaraco.context",
	"jaraco.clipboard",
	"importlib_metadata",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/jaraco/lpaste"

[project.optional-dependencies]
testing = [
	# upstream
	"pytest >= 6",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	'pytest-mypy; python_implementation != "PyPy"', # workaround for jaraco/skeleton#22
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1",

	# local
	"types-requests",
]
docs = [
	# upstream
	"sphinx >= 3.5",
	# workaround for sphinx/sphinx-doc#11662
	"sphinx < 7.3.8",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.scripts]
lpaste = "lpaste.lpaste:main"

[tool.setuptools_scm]
